(executable
  (name ExampleCodemod)
  (public_name ExampleCodemod.exe)
  (libraries ReasonLanguageServer.Codemod compiler-libs.common ocaml-migrate-parsetree reason)
  (flags :standard -open Util -w -26-32-50-9-27-39-33-35-6-3)
  (preprocess (pps ReasonLanguageServer.Belt_ppx ppx_tools_versioned.metaquot_406))
  )